--- a/task-manager-frontend/package.json
+++ b/task-manager-frontend/package.json
@@ -9,16 +9,35 @@
     "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "lint": "eslint .",
+    "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "nuxt": "^3.13.0",
-    "vue": "^3.5.0",
+    "@nuxtjs/i18n": "^10.2.1",
+    "@pinia/nuxt": "^0.11.3",
+    "@tanstack/vue-query": "^5.92.5",
+    "@vee-validate/nuxt": "^4.15.1",
+    "@vee-validate/yup": "^4.15.1",
+    "@vue/test-utils": "^2.4.6",
     "@vueuse/core": "^10.11.0",
+    "@vueuse/motion": "^3.0.3",
     "@vueuse/nuxt": "^10.11.0",
-    "axios": "^1.7.0"
+    "axios": "^1.7.0",
+    "happy-dom": "^20.1.0",
+    "nuxt": "^3.13.0",
+    "pinia": "^3.0.4",
+    "vitest": "^4.0.16",
+    "vue": "^3.5.0",
+    "yup": "^1.7.1",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest"
+    "@nuxt/devtools": "latest",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.2.2"
   }
 }
